lab3: (pte & PTE_V) && (pte & (PTE_R|PTE_W|PTE_X) check some bits of privilege

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "tuple": "c",
         "ostream": "c",
         "sysinfo.h": "c",
-        "syscall.h": "c"
+        "syscall.h": "c",
+        "defs.h": "c"
     }
 }
